kubeconfig/loadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: boathouse-calculator
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3001
  selector:
    app: boathouse-calculator
